tdf#90994 The accessible name should not contain the accessible role

The accessible role (PANEL) is added as a prefix to the title bar
in the sidebar. That is redundant and can even make things confusing
for the users of screen-readers.

Change-Id: I743defa0b1b9f3f278d0cabc7196054796fb3c47
Reviewed-on: https://gerrit.libreoffice.org/15636
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>